style.css
body {
    font-family: 'Kdam Thmor Pro', sans-serif;
    text-align: center;
    background-color: papayawhip;
    box-sizing: border-box;
}

#content-container{
    display: flex;
    justify-content: center;
    flex-wrap: wrap-reverse;
}

button {
    all: none;
    background-color: #f2aca0;
    border: 0px;
    padding: 10px;
    width: 100%;
    max-width: 100px;
    cursor: pointer;
    
    box-shadow: -2px 4px 5px rgba(5, 5, 5, 50%);
    
    border-radius: 10px;
    -webkit-border-radius: 10px;
    -moz-border-radius: 10px;
    -ms-border-radius: 10px;
    -o-border-radius: 10px;
}

button:hover {
    background-color: #e08169;
    color: white;
    
}

#selectors {
    flex: 1 1 0;
    min-width: 130px;
    max-width: 200px;
    min-height: 350px;
    margin: min(20vw, 40px);
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
}

#color-container,
#size-container{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

#color-container {
    cursor: pointer;
    width: 64px;
    height: 64px;
    background-color: black;
    border-radius: 50%;
    -webkit-border-radius: 50%;
    -moz-border-radius: 50%;
    -ms-border-radius: 50%;
    -o-border-radius: 50%;
}

#color-picker{
    width: 64px;
    height: 64px;
    visibility: hidden;
}

#grid {
    flex-grow: 3;
    display: grid; 
    min-width: 350px;
    max-width: 30vw;
    border: 2px solid #f09c92;
    box-shadow: 0px 0px 10px #f2aca0;
    margin: 20px;
}

div#grid > * {
    width: auto; 
    padding-top: 100%;
}

input[type=range] {
    -webkit-appearance: none;
    margin: 10px 0;
    width: 100%;
    height: 11px;
    background-color: rgba(0, 0, 0, 0%);
}
  input[type=range]:focus {
    outline: none;
  }
  input[type=range]::-webkit-slider-runnable-track {
    width: 100%;
    height: 11px;
    cursor: pointer;
    box-shadow: 0px 0px 0px rgba(0, 0, 0, 0%);
    background: rgba(0, 0, 0, 0%);
    border-radius: 5px;
    border: 2px solid #f2aca0;
  }
  input[type=range]::-webkit-slider-thumb {
    box-shadow: 0px 0px 0px rgba(0, 0, 0, 0%);
    border: 9px solid #f09c92;
    height: 11px;
    width: 26px;
    border-radius: 15px;
    background: rgba(0, 0, 0, 0%);
    cursor: pointer;
    -webkit-appearance: none;
    margin-top: -5.5px;
  } 

